<resources>
    <string name="app_name">The Movie Manager</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Watchlist</string>
    <string name="title_notifications">Favorites</string>

    //DEFAULT
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="default_text_null">Not Found</string>
    <string name="not_key_error_message">Key values not found</string>
    <string name="search_message">You can search for movies from the search bar</string>
    <string name="no_favorite_message">There are no favorite movies</string>
    <string name="no_watchlist_message">There are no Watchlist</string>


    //LOGIN
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_website">Login via Website</string>
    <string name="or">or</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_email">"Login with Email"</string>
    <string name="login_underline_text">"Kafein Technology"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>